Issue #11067: Add PyType_GetFlags, to support PyUnicode_Check in the limited ABI